# libsurvive

./: .travis.yml  CMakeLists.txt
.github/workflows/: build_wheels.yml
bindings/cs/Demo/: Program.cs
bindings/cs/libsurvive.net/: SurviveContext.cs
bindings/python/: example_plot.py
include/libsurvive/: survive.h  survive_optimizer.h
redist/: CMakeLists.txt
src/: poser_mpfit.c  survive_optimizer.c  survive_process.c
src/test_cases/: CMakeLists.txt
useful_files/travis/: linux.before_deploy.sh  windows.before_deploy.sh  windows.install.sh  windows.sh
